--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,12 @@
 
         <p class="outro">Boom. There you go! 💥 Now take these beauties and work your magic.<br>
         Need more? Just type another topic and let’s keep this creative train rolling! choo-chooo🚂</p>
+
+        <form action="/" method="POST" class="bottom-form">
+            <label for="bottom-topic">Enter another topic:</label>
+            <input type="text" id="bottom-topic" name="topic" required>
+            <button type="submit">Generate Ideas</button>
+        </form>
     {% endif %}
 </body>
 </html>
